--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,38 @@
 blinker==1.7.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 distro==1.9.0
+filelock==3.13.3
 Flask==3.0.2
+fsspec==2024.3.1
+idna==3.6
 itsdangerous==2.1.2
 Jinja2==3.1.3
+joblib==1.3.2
+JPype1==1.5.0
 MarkupSafe==2.1.5
+mpmath==1.3.0
+networkx==3.2.1
+nltk==3.8.1
 numpy==1.26.4
+packaging==24.0
 pandas==2.2.1
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
+regex==2023.12.25
+requests==2.31.0
+scikit-learn==1.4.1.post1
+scipy==1.12.0
 six==1.16.0
+sympy==1.12
 tabula-py==2.9.0
+threadpoolctl==3.4.0
+torch==2.2.2
+tqdm==4.66.2
+typing_extensions==4.10.0
 tzdata==2024.1
+urllib3==2.2.1
 Werkzeug==3.0.1
